[package]
name = "langgraph-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "langgraph-rs"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
langgraph-inspector = { path = "../langgraph-inspector" }
langgraph-generator = { path = "../langgraph-generator" }
langgraph-runtime = { path = "../langgraph-runtime" }