[package]
name = "langgraph-generator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
quote = "1.0.44"
syn = "2.0.117"
proc-macro2 = "1.0.106"
langgraph-inspector = { path = "../langgraph-inspector" }