[package]
name = "langgraph-inspector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lib]
name = "langgraph_inspector"
crate-type = ["cdylib", "rlib"]